<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hesabchi</string>
    <string name="incomes">Incomes</string>
    <string name="add">Add</string>
    <string name="value">Value :</string>
    <string name="income">Income</string>
    <string name="date">Date :</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="delete_transaction">Delete This Transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="without_category">No Category</string>
    <string name="all">All</string>
    <string name="add_budget">Add budget</string>
    <string name="budget_value">Budget value :</string>
    <string name="budget_name">Budget name :</string>
    <string name="category">Category :</string>
    <string name="card">Card :</string>
    <string name="submit">Confirm</string>
    <string name="budget_name_with_dots">Budget name…</string>
    <string name="card_number_16">16 Digit card number*</string>
    <string name="default_value_of_card">Enter the initial value of the card (optional)</string>
    <string name="bank_not_found">Bank not found!</string>
    <string name="name">Name :</string>
    <string name="category_name">Category name…</string>
    <string name="add_category">Add category</string>
    <string name="expense">Expense</string>
    <string name="choose_transaction_type">Choose transaction type</string>
    <string name="enter_value">Enter value *</string>
    <string name="choose_category_and_card">Choose category and card</string>
    <string name="enter_details">Enter details(optional)</string>
    <string name="details">Details…</string>
    <string name="transfer">Transfer</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="total_value">Total value</string>
    <string name="defualt_value">Default value</string>
    <string name="transactions_value">Value of transactions</string>
    <string name="all_transactions">All transactions</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="total_transactions">Total transactions</string>
    <string name="month">Month</string>
    <string name="this_year">Year</string>
    <string name="no_transaction_found">No transaction found!</string>
    <string name="details2">Details :</string>
    <string name="toman">Toman</string>
    <string name="this_month_transactions">Month\'s transactions</string>
    <string name="used">Used value :</string>
    <string name="enough">Remained value :</string>
    <string name="sure_about_delete_budget">Delete this budget?</string>
    <string name="budget">Budget</string>
    <string name="transaction">Transaction</string>
    <string name="from_card">From :</string>
    <string name="to_card">To :</string>
    <string name="please_enter_values_right">Please enter the values correctly</string>
    <string name="budget_changed">Budget changed</string>
    <string name="budget_added">Budget added</string>
    <string name="change">Change</string>
    <string name="card_changed">Card changed</string>
    <string name="card_number_is_repited">Card number is duplicate</string>
    <string name="card_added">Card added</string>
    <string name="please_enter_card_number_curectly">Please enter card number correctly</string>
    <string name="plese_enter_card_number">Please enter card number!</string>
    <string name="change_category">Change category</string>
    <string name="category_changed">Category changed</string>
    <string name="category_added">Category added</string>
    <string name="please_enter_category_name">Please enter category name</string>
    <string name="without_card">Without card</string>
    <string name="please_choose_difrent_cards">Please choose two different cards!</string>
    <string name="please_enter_all_values">Please enter all values</string>
    <string name="transation_changed">Transaction changed</string>
    <string name="transaction_added">Transaction added</string>
    <string name="all_cards">All cards</string>
    <string name="all_categories">All categories</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="sure_about_delete_category">Are you sure you want to delete this category?\nAll budgets in this category will be deleted</string>
    <string name="sure_about_delete_card">Delete this card?</string>
    <string name="choose_language">Choose language</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="transactions">Transactions</string>
    <string name="history">History</string>
    <string name="cards">Cards</string>
    <string name="categories">Categories</string>
    <string name="theme">App Theme</string>
    <string name="language">Language</string>
    <string name="filter">Filter :</string>
    <string name="night">Night</string>
    <string name="light">Day</string>
    <string name="choose_theme">Choose app theme</string>
    <string name="icon">Icon</string>
    <string name="icon2">Icon :</string>
    <string name="select_icon">Choose icon</string>
    <string name="color">Color</string>
    <string name="choose_color">Choose color</string>
    <string name="paid">Paid value :</string>
    <string name="debtTo">Debt to :</string>
    <string name="add_debt">Add Debt</string>
    <string name="debt_name">Debt name :</string>
    <string name="debt_name_with_dots">Debt name…</string>
    <string name="debt_value">Debt value :</string>
    <string name="change_budget">Change budget</string>
    <string name="paid_value">Paid value :</string>
    <string name="debt_to_with_dots">Debt to…</string>
    <string name="debt_to">Debt to :</string>
    <string name="debt">Debt</string>
    <string name="change_debt">Change debt</string>
    <string name="debt_added">Debt added</string>
    <string name="debt_changed">Debt changed</string>
    <string name="delete_this_debt">Delete this debt?</string>
    <string name="paid_and_total_value_error">The paid value cannot be more than the total value!</string>
    <string name="start_date">Start date :</string>
    <string name="debt_date">Debt start date</string>
    <string name="every_debt_value">Installments value :</string>
    <string name="debt_count">Installments :</string>
    <string name="paid_debts">Paid installments :</string>
    <string name="finish_date">Finish date :</string>
    <string name="year">Year :</string>
    <string name="month2">Month :</string>
    <string name="day2">Day :</string>
    <string name="choose_date">Choose date :</string>
    <string name="unknown">Uncertain</string>
    <string name="ask_for_comment">Are you happy with the app?</string>
    <string name="please_rate_app">لطفا به برنامه نظر بدهید</string>
    <string name="exit_app">Exit app?</string>
    <string name="exit">Exit</string>
    <string name="add_card">Add card</string>
    <string name="paid_installments_cannot_be_more_than_all_installments">paid installments cannot be more than all installments</string>
    <string name="installment_value_cannot_be_more_than_total_value">installment value cannot be more than total value</string>
    <string name="please_enter_date_correctly">please enter date correctly</string>
    <string name="please_enter_transaction_value">please enter transaction value</string>
    <string name="please_choose_two_cards">please choose two cards</string>
    <string name="card_number_is_too_short">card number is too short</string>
    <string name="please_enter_value">please enter value</string>
    <string name="please_enter_budget_name">please enter budget name</string>
    <string name="please_enter_category">please enter category</string>
    <string name="alarm">Reminder</string>
    <string name="turn_off">Inactive</string>
    <string name="turn_on">Active</string>
    <string name="everyday">Daily</string>
    <string name="alarm_guid">By activating this feature, a notification will be sent to you every day at the hour you choose so that you remember to add your new transactions.</string>
    <string name="cardsAndCategories">Cards And Categories</string>
    <string name="purchase_subscription">Purchase Subscription</string>
    <string name="vip_version">Special Version</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="need_to_purchse_subscriptiom">You have reached the free version of the app. To remove the limitation, you need to purchase a subscription to the app.</string>
    <string name="using_free_subscription">You\'re using free version of app</string>
    <string name="free_capability">Capabilities of free version of app :</string>
    <string name="vip_capability">Capabilities of special version of app :</string>
    <string name="free_capabilitis">30 Transactions\n12 Categories\n5 Cards\n3 Debts\n3 Budgets</string>
    <string name="vip_capabilities">Unlimited Transactions\nUnlimited Categories\nUnlimited Cards\nUnlimited Debts\nUnlimited Budgets</string>
    <string name="choose_plan">Choose a plan :</string>
    <string name="normal">Normal</string>
    <string name="free">Free</string>
    <string name="month1">1 Month</string>
    <string name="toman30000">30,000 Toman</string>
    <string name="month3">3 Months</string>
    <string name="toman70000">70,000 Toman</string>
    <string name="year1">1 Year</string>
    <string name="toman200000">200,000 Toman</string>
    <string name="purchase">Purchase</string>
    <string name="try_again">Something went wrong.Please try again</string>
    <string name="purchase_success">Purchase was successful</string>
    <string name="purchase_failed_try_again">Purchase failed.Please try again</string>
    <string name="problem_with_bazaar">App couldn\'t connect to bazaar</string>
    <string name="click_to_create_backup">Click on one of below buttons to create or restore a backup</string>
    <string name="backup">Backup</string>
    <string name="open_backup">Restore a backup</string>
    <string name="create_backup">Create a backup</string>
    <string name="sure_about_restore_backup">Are you sure about restoring this backup?\nYour previous information will be destroyed!</string>
    <string name="backup_restored">Backup restored successfully!</string>
    <string name="backup_created">Backup created successfully</string>
    <string name="cateogory_type">Category mode :</string>
    <string name="changing_category_type">Are you sure about changing this category\'s mode?\nAll transactions in this category will change.</string>
    <string name="category2">Category</string>
    <string name="based_on">Based on :</string>
    <string name="transactions_in_category">Transaction in category</string>
    <string name="card2">Card</string>
    <string name="see_transactions">See transactions</string>
    <string name="reminder_text">It\'s time to add your new transactions!</string>
    <string name="transaction_reminder">Reminder</string>
    <string name="transactions_in_budget">Transactions in budget</string>
</resources>