<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    android:weightSum="2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RadioButton
        android:id="@+id/btnTransaction"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_weight="1"
        style="@style/radioTheme2"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/transaction" />

    <RadioButton
        android:id="@+id/btnCategory"
        style="@style/radioTheme2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:button="@null"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/category2" />

    <RadioButton
        android:id="@+id/btnCard"
        style="@style/radioTheme2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:button="@null"
        android:gravity="center"
        android:padding="8dp"
        android:singleLine="true"
        android:text="@string/card2" />

</RadioGroup>
